@@ -71,6 +71,3 @@ Current Status
 	GNU nano has reached its fifth stable milestone, 2.4.x.
 	Development of new features will continue in the 2.5.x branch,
 	while 2.4.x versions are dedicated to bug-fixing and polishing.
-
-
-
