@@ -3,6 +3,8 @@
 	* src/files.c (do_lockfile): Rename a variable; it does not contain
 	the size of the file but the size of the name.
 	* src/nano.c (do_toggle): Elide an unneeded variable.
+	* src/files.c: Unwrap some lines and rewrap some others in a more
+	congenial manner; tweak some comments and whitespace and braces.
 
 2015-07-06  Benno Schulenberg  <bensberg@justemail.net>
 	* src/global.c (add_to_sclist), src/help.c (help_init), src/nano.h,
